[gd_scene load_steps=17 format=3 uid="uid://dksmuc0t8vq41"]

[ext_resource type="PackedScene" uid="uid://dlseb4whqrry5" path="res://Scenes/Tools/overhead_health_bar.tscn" id="1_qmrfq"]
[ext_resource type="Script" path="res://Scripts/Tools/armored_health_bar.gd" id="2_o8bcn"]
[ext_resource type="Texture2D" uid="uid://dx4yya8tfynts" path="res://Sprites/UI/ArmorIcon.png" id="3_syjpp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtyd4"]
atlas = ExtResource("3_syjpp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpljq"]
atlas = ExtResource("3_syjpp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6ptd"]
atlas = ExtResource("3_syjpp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edkib"]
atlas = ExtResource("3_syjpp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf7e6"]
atlas = ExtResource("3_syjpp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mivh7"]
atlas = ExtResource("3_syjpp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqicm"]
atlas = ExtResource("3_syjpp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etwrr"]
atlas = ExtResource("3_syjpp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c84sp"]
atlas = ExtResource("3_syjpp")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjytc"]
atlas = ExtResource("3_syjpp")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ful2a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtyd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpljq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6ptd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edkib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf7e6")
}],
"loop": false,
"name": &"break",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mivh7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqicm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etwrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c84sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjytc")
}],
"loop": false,
"name": &"repair",
"speed": 12.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_liweo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8yglw"]
bg_color = Color(0.317647, 0.396078, 0.870588, 1)
corner_detail = 1

[node name="ArmoredHealthBar" instance=ExtResource("1_qmrfq")]
script = ExtResource("2_o8bcn")

[node name="ArmorIcon" type="AnimatedSprite2D" parent="." index="1"]
z_index = 1
position = Vector2(26, -5)
sprite_frames = SubResource("SpriteFrames_ful2a")
autoplay = "default"

[node name="ArmorProgressBar" type="ProgressBar" parent="." index="2"]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 51.0
theme_override_styles/background = SubResource("StyleBoxFlat_liweo")
theme_override_styles/fill = SubResource("StyleBoxFlat_8yglw")
value = 50.0
show_percentage = false

[connection signal="animation_finished" from="ArmorIcon" to="." method="_on_armor_icon_animation_finished"]
